rename package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app_feedback
+name: user_feedback
 description: A Flutter package for getting app feedback from users.
 version: 1.0.0
 homepage: https://github.com/suzan-1515/app_feedback
